--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!Doctype HTML>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <a href="https://academyxi.com">Academy Xi</a>
+    </body>
+</html>
