--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
     </head>
     <body>
-        <a href="https://academyxi.com">Academy Xi</a>
+        <a href="https://google.com">This is a link to google</a>
     </body>
 </html>
